Finish static pages

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,6 @@
-<h1>Sample App</h1>
-<p>
-	Find me in 
-	<a href="http://google.com">Google</a>
-</p>
+<% provide(:title, 'Home') %>
+	<h1>Sample App</h1>
+	<p>
+		Find me in 
+		<a href="http://google.com">Google</a>
+	</p>
